---
source: crates/symbolicator-proguard/tests/integration/proguard.rs
assertion_line: 482
expression: response
---
exceptions:
  - type: RuntimeException
    module: java.lang
stacktraces:
  - exception:
      type: RuntimeException
      module: java.lang
    frames:
      - function: main
        filename: ZygoteInit.java
        module: com.android.internal.os.ZygoteInit
        lineno: 698
        index: 0
      - function: run
        filename: ZygoteInit.java
        module: com.android.internal.os.ZygoteInit$MethodAndArgsCaller
        lineno: 903
        index: 1
      - function: invoke
        filename: Method.java
        module: java.lang.reflect.Method
        lineno: 372
        index: 2
      - function: invoke
        filename: Method.java
        module: java.lang.reflect.Method
        index: 3
      - function: main
        filename: ActivityThread.java
        module: android.app.ActivityThread
        lineno: 5254
        index: 4
      - function: loop
        filename: Looper.java
        module: android.os.Looper
        lineno: 135
        index: 5
      - function: dispatchMessage
        filename: Handler.java
        module: android.os.Handler
        lineno: 95
        index: 6
      - function: handleCallback
        filename: Handler.java
        module: android.os.Handler
        lineno: 739
        index: 7
      - function: run
        filename: View.java
        module: android.view.View$PerformClick
        lineno: 19866
        index: 8
      - function: performClick
        filename: View.java
        module: android.view.View
        lineno: 4780
        index: 9
      - function: onClick
        filename: ActionMenuItemView.java
        module: androidx.appcompat.view.menu.ActionMenuItemView
        lineno: 7
        index: 10
      - function: invokeItem
        filename: ActionMenuView.java
        module: androidx.appcompat.widget.ActionMenuView
        lineno: 4
        index: 11
      - function: performItemAction
        filename: MenuBuilder.java
        module: androidx.appcompat.view.menu.MenuBuilder
        lineno: 1
        index: 12
      - function: performItemAction
        filename: MenuBuilder.java
        module: androidx.appcompat.view.menu.MenuBuilder
        lineno: 4
        index: 13
      - function: invoke
        filename: MenuItemImpl.java
        module: androidx.appcompat.view.menu.MenuItemImpl
        lineno: 15
        index: 14
      - function: dispatchMenuItemSelected
        filename: MenuBuilder.java
        module: androidx.appcompat.view.menu.MenuBuilder
        lineno: 5
        index: 15
      - function: onMenuItemSelected
        filename: ActionMenuView.java
        module: androidx.appcompat.widget.ActionMenuView$MenuBuilderCallback
        lineno: 7
        index: 16
      - function: onMenuItemClick
        filename: Toolbar.java
        module: androidx.appcompat.widget.Toolbar$1
        lineno: 7
        index: 17
      - function: onCreate$lambda-1
        filename: EditActivity.kt
        module: io.sentry.samples.instrumentation.ui.EditActivity
        abs_path: EditActivity.kt
        lineno: 37
        pre_context:
          - "        }"
          - ""
          - "        findViewById<Toolbar>(R.id.toolbar).setOnMenuItemClickListener {"
          - "            if (it.itemId == R.id.action_save) {"
          - "                try {"
        context_line: "                    SomeService().helloThere()"
        post_context:
          - "                } catch (e: Exception) {"
          - "                    Sentry.captureException(e)"
          - "                }"
          - ""
          - "                val transaction = Sentry.startTransaction("
        in_app: true
        index: 18
      - function: helloThere
        filename: SomeService.java
        module: io.sentry.samples.instrumentation.ui.SomeService
        abs_path: SomeService.java
        lineno: 5
        pre_context:
          - package io.sentry.samples.instrumentation.ui
          - ""
          - "class SomeService {"
          - "    fun helloThere() {"
        context_line: "        InnerClassOfSomeService().helloInner()"
        post_context:
          - "    }"
          - ""
          - "    class InnerClassOfSomeService {"
          - "        fun helloInner() {"
          - "            AnotherClassInSameFile().helloOther()"
        in_app: true
        index: 18
      - function: helloInner
        filename: SomeService.java
        module: io.sentry.samples.instrumentation.ui.SomeService$InnerClassOfSomeService
        abs_path: SomeService.java
        lineno: 10
        pre_context:
          - "        InnerClassOfSomeService().helloInner()"
          - "    }"
          - ""
          - "    class InnerClassOfSomeService {"
          - "        fun helloInner() {"
        context_line: "            AnotherClassInSameFile().helloOther()"
        post_context:
          - "        }"
          - "    }"
          - "}"
          - ""
          - "class AnotherClassInSameFile {"
        in_app: true
        index: 18
      - function: helloOther
        filename: AnotherClassInSameFile.java
        module: io.sentry.samples.instrumentation.ui.AnotherClassInSameFile
        abs_path: AnotherClassInSameFile.java
        lineno: 17
        in_app: true
        index: 18
      - function: otherFun
        filename: AnotherClassInSameFile.java
        module: io.sentry.samples.instrumentation.ui.AnotherClassInSameFile
        abs_path: AnotherClassInSameFile.java
        lineno: 21
        in_app: true
        index: 18
      - function: helloOtherInner
        filename: AnotherClassInSameFile.java
        module: io.sentry.samples.instrumentation.ui.AnotherClassInSameFile$AnotherInnerClass
        abs_path: AnotherClassInSameFile.java
        lineno: 26
        in_app: true
        index: 18
classes: {}
errors:
  - uuid: 8236f5cf-52c8-4e35-a7cf-01421e4c2c88
    type: missing
